--- a/src/Obj2Gltf/Obj2Gltf.csproj
+++ b/src/Obj2Gltf/Obj2Gltf.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
@@ -20,6 +20,7 @@
   <PropertyGroup Condition="'$(TargetFramework)'=='net45'">
     <AssemblyTitle>Obj23dTiles</AssemblyTitle>
     <DefineConstants>$(AdditionalConstants)</DefineConstants>
+   
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <AssemblyTitle>Obj23dTiles .NET Standard 2.0</AssemblyTitle>
@@ -34,6 +35,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+  
+  <ItemGroup Condition="'$(TargetFramework)'=='net45'">
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
