--- a/src/Obj2Gltf/Obj2Gltf.csproj
+++ b/src/Obj2Gltf/Obj2Gltf.csproj
@@ -1,40 +1,61 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project>
+  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
   <PropertyGroup>
+    <AssemblyTitle>Obj2Gltf</AssemblyTitle>
+    <AssemblyName>SilentWave.Obj2Gltf</AssemblyName>
+    <RootNamespace>SilentWave.Obj2Gltf</RootNamespace>
+    <Version>1.1.7</Version>
+    <PackageTags>obj gltf glb</PackageTags>
+    <Description>Convert wavefront obj file to gltf file and gltf to glb</Description>
     <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <TargetFrameworks Condition="'$(LibraryFrameworks)'!=''">$(LibraryFrameworks)</TargetFrameworks>
-    <RootNamespace>Arctron.Obj2Gltf</RootNamespace>
-    <Authors>Arctron</Authors>
-    <Company>Arcplus</Company>
+    <Configurations>Source;Debug;Release</Configurations>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyName>Arctron.Obj2Gltf</AssemblyName>
-    <PackageTags>obj gltf</PackageTags>
-    <PackageProjectUrl>https://github.com/arcplus/ObjConvert</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/arcplus/ObjConvert</RepositoryUrl>
-    <Copyright>Copyright © Arcplus 2018</Copyright>
-    <Description>Convert wavefront obj file to gltf/glb file</Description>
-    <Version>1.1.2</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='net45'">
-    <AssemblyTitle>Obj23dTiles</AssemblyTitle>
-    <DefineConstants>$(AdditionalConstants)</DefineConstants>
+  <PropertyGroup Condition="'$(Configuration)'=='Source'">
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+    <NoBuild>true</NoBuild>
+    <NoWarn>CS8021</NoWarn>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
+    <ContentTargetFolders>contentFiles</ContentTargetFolders>
+    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+    <PackageId>SilentWave.Obj2Gltf.Sources</PackageId>
+  </PropertyGroup>
 
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <AssemblyTitle>Obj23dTiles .NET Standard 2.0</AssemblyTitle>
-    <DefineConstants>$(AdditionalConstants)</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\Arctron.Obj2Gltf.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net45|AnyCPU'">
-    <DocumentationFile>bin\Release\net45\Arctron.Obj2Gltf.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(Configuration)'!='Source'">
+    <PackageId>SilentWave.Obj2Gltf</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
+
+  <ItemGroup Condition="'$(Configuration)'=='Source'">
+    <Compile Include="**\*.cs" Exclude="obj\**">
+      <Pack>true</Pack>
+      <PackagePath>$(ContentTargetFolders)\cs\netstandard2.0\$(PackageId)\%(Identity)</PackagePath>
+    </Compile>
+    <EmbeddedResource Update="@(EmbeddedResource)">
+      <Pack>true</Pack>
+      <PackagePath>$(ContentTargetFolders)\any\any\$(PackageId)\%(RecursiveDir)\</PackagePath>
+    </EmbeddedResource>
+    <PackageReference Remove="@(PackageReference)" />
+  </ItemGroup>
+
+  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
+
+
+  <Import Project=".\DisableSourceUnwanted.targets" Condition="'$(Configuration)'=='Source'" />
+  
+
+  <Target Name="DisplayMessages" AfterTargets="Build">
+    <Message Text="Project File Name = $(MSBuildProjectFile)" />
+    <Message Text="Project Extension = $(MSBuildProjectExtension)" />
+    <Message Importance="high" Text="Project Configuration = $(Configuration)" />
+  </Target>
 
 </Project>
